Fixed spacing on SummonerPage

--- a/react/src/css/SummonerSplash.css
+++ b/react/src/css/SummonerSplash.css
@@ -1,7 +1,7 @@
 #summonerParent {
     margin-bottom: 2.5em;
     height: fit-content;
-    min-width: fit-content;
+    width: 100%;
 }
 
 .summoner {
